--- a/notebooks/05-Clustering.ipynb
+++ b/notebooks/05-Clustering.ipynb
@@ -1023,7 +1023,7 @@
    "metadata": {},
    "source": [
     "1. Import the movement.csv dataset\n",
-    "2. Visualize as scatter plot of ```x_acc``` and ```y_acc``` and color by the ```move_type```.\n",
+    "2. Visualize as scatter plot of ```z_acc``` and ```y_acc``` and color by the ```move_type```.\n",
     "2. Try to cluster the data with these features. Try KMeans and DBSCAN. Do you achieve a good clustering?"
    ]
   },
